# OpenVic

./: .astylesrc  .clang-format  .clang-tidy  .editorconfig  .git-blame-ignore-revs  .gitignore  .gitmodules  .mailmap  .pre-commit-config.yaml  AUTHORS.md  CMakeLists.txt  CMakePresets.json  COPYRIGHT  LICENSE-EXCEPTIONS.md  LICENSE.md  README.md  SConstruct  astyle.sh  clang-format.sh  gdstyle.toml  pyproject.toml
.github/: CODEOWNERS  changed-files.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: 1-bug-report.yml  2-victoria-2-discrepancy.yml  2-victoria-2-discrepency.yml  3-gameplay-feature-request.yml  4-mod-feature-request.yml  config.yml
.github/actions/godot-env/: action.yml
.github/actions/mingw-cache/: action.yml
.github/actions/openvic-build/: action.yml
.github/actions/openvic-cache/: action.yml
.github/actions/openvic-env/: action.yml  commit-environment.js  url-environment.sh
.github/actions/openvic-export/: action.yml
.github/actions/openvic-release/: action.yml  nightly-release-notes-configuration.json  release-notes-configuration.json  snapshot-release-notes-configuration.json
.github/actions/openvic2-env/: action.yml
.github/workflows/: build-matrix.yml  builds.yml  cache_cleanup.yml  dependabot-labels.yml  nightly-releases.yml  releases.yml  update-scripts.yml
cmake/: ClangFormat.cmake  CompilerWarnings.cmake  GitVersionInfo.cmake  ccache.cmake
docs/: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SETUP.md  contribution-quickstart-guide.md  dataloading-architecture.md  general-program-architecture.md  makefile  project-file-structure.md  styleguide-cpp.md  styleguide-cpp.tex  table-of-contents.md
docs/contribution/: cloning.md  dataloading-architecture.md  debugging.md  project-file-structure.md  rebasing.md  run-build-and-export.md  system-requirements.md  using-git-bisect.md
docs/design/: econ-design.md  event-design.md  scoped-effects-proposal.md
docs/research/: state-merging.md
docs/simulation/: calculations.yaml  goods.md  ideologies.md  provinces.md  sim-doc-format.md  state-merging.md
extension/data/: regions.json
extension/doc_classes/: ArgumentOption.xml  ArgumentParser.xml  AssetManager.xml  Checksum.xml  CursorSingleton.xml  GFXButtonStateHavingTexture.xml  GFXButtonStateTexture.xml  GFXCorneredTileSupportingTexture.xml  GFXMaskedFlagTexture.xml  GFXPieChartTexture.xml  GFXSpriteTexture.xml  GUIButton.xml  GUIIcon.xml  GUIIconButton.xml  GUILabel.xml  GUILineChart.xml  GUIListBox.xml  GUIMaskedFlag.xml  GUIMaskedFlagButton.xml  GUINode.xml  GUIOverlappingElementsBox.xml  GUIPieChart.xml  GUIProgressBar.xml  GUIScrollbar.xml  GUITextureRect.xml  GameSettings.xml  GameSingleton.xml  GitInfo.xml  LoadLocalisation.xml  MapItemSingleton.xml  MapMesh.xml  MenuSingleton.xml  ModelSingleton.xml  OVDataloader.xml  OVGame.xml  OVLexyVDF.xml  OVSimulation.xml  PlayerSingleton.xml  SoundSingleton.xml  StyleBoxWithSound.xml
extension/doc_tools/: class.xsd  git_fetcher.py  make_rst.py  version.py
extension/doc_tools/patches/: make_rst.patch
extension/src/: CMakeLists.txt  Checksum.hpp  GameSingleton.cpp  GameSingleton.hpp  LoadGameCompatibility.cpp  LoadGameOpenVic.cpp  LoadLocalisation.cpp  LoadLocalisation.hpp  MapMesh.cpp  MapMesh.hpp  MapSingleton.cpp  MapSingleton.hpp  OV2Types.hpp  Simulation.cpp  Simulation.hpp  TestSingleton.cpp  TestSingleton.hpp  Utilities.cpp  Utilities.hpp  Version.h.in  register_types.cpp  register_types.h
extension/src/fixed_point/: fp.h  fp_lut.h  fp_lut_sin_512.h  fp_math.h
extension/src/openvic-extension/: Checksum.cpp  Checksum.hpp  GameSingleton.cpp  GameSingleton.hpp  LoadGameCompatibility.cpp  LoadGameOpenVic.cpp  LoadLocalisation.cpp  LoadLocalisation.hpp  MapMesh.cpp  UIAdapter.cpp  UIAdapter.hpp  Utilities.cpp  Utilities.hpp  pch.cpp  pch.hpp  register_types.cpp  register_types.hpp
extension/src/openvic2/: Date.cpp  Date.hpp  GameAdvancementHook.cpp  GameAdvancementHook.hpp  GameManager.cpp  GameManager.hpp  Good.cpp  Good.hpp  LoadGoods.cpp  LoadGoods.hpp  Logger.cpp  Logger.hpp  Map.cpp  Map.hpp  Province.cpp  Province.hpp  Region.cpp  Region.hpp  Types.cpp  Types.hpp
extension/src/utils/: float_utils.h  string_utils.h
game/: default_bus_layout.tres  default_theme.theme  default_theme.tres  export_presets.cfg  icon.svg.import  project.godot
game/addons/MusicMetadata/: LICENSE.md  MusicMetadata.gd  MusicMetadata.gd.uid  MusicMetadataPlugin.gd  MusicMetadataPlugin.gd.uid  README.md  icon.png.import  icon.svg.import  plugin.cfg
game/addons/OpenVic/: OpenVic.gd  OpenVic.gd.uid  TranslatorPlugin.gd  TranslatorPlugin.gd.uid  plugin.cfg
game/addons/gdUnit4/: plugin.cfg  plugin.gd  plugin.gd.uid
game/addons/kenney_ui_audio/: LICENSE.txt  click3.wav.import
game/addons/keychain/: Keychain.gd  Keychain.gd.uid  ShortcutEdit.gd  ShortcutEdit.gd.uid  ShortcutEdit.tscn  ShortcutProfile.gd  ShortcutProfile.gd.uid  (+3 more)
game/art/: OpenVicLogo.png.import  missing_image.png.import
game/assets/: OpenVic.icns  OpenVic.svg.import  OpenVicLogo.png.import
game/common/: credits.csv  credits.csv.import  culture_groups.json  goods.json  quotes.txt  religion.json
game/localisation/: README.md
game/splash_assets/: globe.png.import  ovgear.png.import  splash_end.png.import  splash_image.png.import
game/src/: ArgumentParser.gd  ArgumentParser.tscn  GIT_INFO.gd  GIT_INFO.gd.uid  GameMenu.gd  GameMenu.tscn  GameStart.tscn  LocaleButton.gd  LocaleButton.tscn  MainMenu.gd  MainMenu.tscn  OpenVic2.tscn  OptionsMenu.gd  OptionsMenu.tscn  SampleGame.gd  SampleGame.tscn  SplashContainer.gd  StartNode.gd  StartNode.tscn
game/testing/: 21.gdshader  exp.png.import  mountains-nowater.png.import  mountains.png.import  mountains1.png.import  mountains1.raw.pal  terrain.png.import  testing.gdshader  testing.tscn  water.gdshader
game/theme/: credits_menu.tres  default_theme.tres  game_session_menu.tres  main_menu.tres  options_menu.tres
game/theme_assets/: main_menu_background.png.import  main_menu_border_paper.png.import  main_menu_button.png.import
tools/: extension_build.py
(+1275 files in other folders)
